# dataidea

./: .gitignore  CNAME  Readme.md  db.sqlite3  index.html  manage.py  pyproject.toml
accounts/: urls.py  views.py
assets/: .htaccess
assets/css/: jumashafara.css  jumashafara_custom.css  style.css
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_author_alter_authors_email_alter_authors_name_and_more.py  0003_blogcomment.py  0004_delete_hashnode_and_more.py  0005_alter_blog_cover_image_alter_blog_date_featured.py  0006_alter_blog_date_featured.py  0007_alter_blog_cover_image_alter_blog_date_featured_and_more.py  0008_author_blogcategory_delete_authors.py  0009_blog_author.py  0010_blog_category.py
dataidea/: asgi.py  settings.py  urls.py  wsgi.py
index/: admin.py  models.py  urls.py  views.py
index/migrations/: 0001_initial.py  0002_feedback.py  0002_rename_faq_frequentlyaskedquestion_portfolio_client_and_more.py  0003_remove_service_image.py  0003_rename_project_date_portfolio_date_and_more.py  0004_alter_service_description_alter_service_image.py  0004_service_color.py  0005_companyinfo_delete_statistics.py  0006_termofservice.py  0007_privacypolicy.py  0008_partner.py
profiles/: urls.py  views.py
school/: admin.py  models.py  urls.py  views.py
school/migrations/: 0001_initial.py  0002_remove_tutor_course_course_tutors_and_more.py  0003_course_level.py  0004_organization_course_organization.py  0005_remove_course_organization_course_organization.py  (+18 more)
tools/: admin.py  forms.py  models.py  urls.py  views.py
(+31 files in other folders)
